--- a/newscenter.html
+++ b/newscenter.html
@@ -13,6 +13,25 @@
 <div class="carlist-wrapper">
   <div class="carlist-slide">
 
+
+    <div class="carlist-1">
+      <span class="ccc">
+          <h4></h4>
+          <div class="dd">
+        <a><img href="/newshere.html/mic.html" class="c1" id="c1" src="/assets/newsimg/mic.png"></a>  
+      </span>
+      <div class="car-details">
+    <a href="/newshere.html/mic.html">  <h4 class="h33">GOAT crypto surges amid FOMO after multiple exchange listings</h4></a>
+      <br>
+      <h4 class="hh5">8:12am 23rd oct 2024</h4>
+    <!--  <h4 class="h44">43 minutes ago</h4>-->
+      <br>
+    
+      
+      </div>
+      </div>
+      </div>
+
     <div class="carlist-1">
       <span class="ccc">
           <h4></h4>
