--- a/newscenter.html
+++ b/newscenter.html
@@ -17,12 +17,12 @@
       <span class="ccc">
           <h4></h4>
           <div class="dd">
-        <a><img href="/newshere.html/binan.html" class="c1" id="c1" src="/assets/newsimg/banin.png"></a>  
+        <a><img href="/newshere.html/ripple.html" class="c1" id="c1" src="/assets/newsimg/gemm.png"></a>  
       </span>
       <div class="car-details">
-    <a href="/newshere.html/binan.html">  <h4 class="h33">Hoppy token hits all-time high, rare pattern points to more gains  </h4></a>
+    <a href="/newshere.html/ripple.html">  <h4 class="h33">Ripple files cross appeal in ongoing legal battle with SEC  </h4></a>
       <br>
-      <h4 class="hh5">1:44pm 25th oct 2024</h4>
+      <h4 class="hh5">2:05pm 25th oct 2024</h4>
     <!--  <h4 class="h44">43 minutes ago</h4>-->
       <br>
     
