--- a/newscenter.html
+++ b/newscenter.html
@@ -12,6 +12,25 @@
 <h1 class="jnews">NEWS</h1>
 <div class="carlist-wrapper">
   <div class="carlist-slide">
+    <div class="carlist-1">
+      <span class="ccc">
+          <h4></h4>
+          <div class="dd">
+        <a><img href="/newshere.html/cardon.html" class="c1" id="c1" src="/assets/newsimg/toy.png"></a>  
+      </span>
+      <div class="car-details">
+    <a href="/newshere.html/cardon.html">  <h4 class="h33">Cardano vs. Dogecoin vs. Cutoshi: A race to reach $1 first</h4></a>
+      <br>
+      <h4 class="hh5">8:55pm 23rd oct 2024</h4>
+    <!--  <h4 class="h44">43 minutes ago</h4>-->
+      <br>
+    
+      
+      </div>
+      </div>
+      </div>
+
+
 
     <div class="carlist-1">
       <span class="ccc">
